// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KpiChart /> should render with render props 1`] = `
.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.7rem 1.4rem;
  border-radius: 0.4rem;
  font-size: calc(1.2rem + 0.2rem);
  line-height: calc(1.2rem + 0.2rem);
  color: hsl(0,100%,100%);
  border: 1px solid;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  cursor: pointer;
  outline: none;
  padding: 0.4rem 1.5rem;
  color: #dbdfe6;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(218,18%,91%);
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c3:hover:not([disabled]) {
  background: #dbdfe6;
  border: 1px solid #dbdfe6;
  color: hsl(0,100%,100%)   color:current;
  background: none;
  border: none;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.7rem 1.4rem;
  border-radius: 0.4rem;
  font-size: calc(1.2rem + 0.2rem);
  line-height: calc(1.2rem + 0.2rem);
  color: hsl(0,100%,100%);
  border: 1px solid;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  cursor: pointer;
  outline: none;
  color: #dbdfe6;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(218,18%,91%);
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c7:hover:not([disabled]) {
  background: #dbdfe6;
  border: 1px solid #dbdfe6;
  color: hsl(0,100%,100%)   color:current;
  background: none;
  border: none;
}

.c4 {
  display: inline-block;
  font-size: 1rem;
  line-height: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-weight: 600;
  font-size: 1.6rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px dotted hsl(213,17%,20%);
}

.c5 {
  height: 37.3rem;
}

.c6 {
  position: absolute;
  bottom: 1.5rem;
  left: 1rem;
}

.c6 button {
  color: hsl(200,74%,46%);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2.4rem 2rem;
  height: 100%;
  border-radius: 0.4rem;
  border: 1px solid hsl(218,18%,91%);
  background: hsl(0,100%,100%);
  font-size: 1.2rem;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(KpiChart)
    render={[Function]}
    reportTitle="reportTitle"
    title="title"
  >
    <KpiChart
      className="c0"
      render={[Function]}
      reportTitle="reportTitle"
      title="title"
    >
      <div
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div>
              <div
                className="c2"
              >
                title
              </div>
            </styled.div>
            <Button
              ghost={true}
              onClick={[Function]}
              small={true}
            >
              <Button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                inverted={false}
                isGoogle={false}
                light={false}
                onClick={[Function]}
                primary={false}
                rounded={false}
                secondary={false}
                small={true}
                success={false}
                tiny={false}
                type="button"
              >
                <styled.button
                  big={false}
                  className=""
                  disabled={false}
                  failure={false}
                  fluid={false}
                  ghost={true}
                  inverted={false}
                  isGoogle={false}
                  light={false}
                  onClick={[Function]}
                  primary={false}
                  rounded={false}
                  secondary={false}
                  small={true}
                  success={false}
                  tiny={false}
                  type="button"
                >
                  <button
                    className="c3"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <Styled(Icon)
                      color="hsl(213, 17%, 20%)"
                      height="1.6rem"
                      name="cog"
                      width="1.6rem"
                    >
                      <Icon
                        className=""
                        color="hsl(213, 17%, 20%)"
                        height="1.6rem"
                        name="cog"
                        spin={false}
                        width="1.6rem"
                      >
                        <styled.div
                          spin={false}
                        >
                          <div
                            className="c4"
                          >
                            <svg
                              height="1.6rem"
                              viewBox="0 0 512 512"
                              width="1.6rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M444.373 192H448c35.346 0 64 28.654 64 64 0 35.346-28.654 64-64 64h-1.835a13.867 13.867 0 0 0-12.69 8.404c-2.38 5.396-1.282 11.453 2.517 15.338l1.271 1.271a64 64 0 0 1 .017 90.544 64 64 0 0 1-90.552.008l-1.112-1.115c-4.053-3.963-10.11-5.062-15.505-2.682-5.08 2.178-8.382 7.164-8.404 12.605V448c0 35.346-28.654 64-64 64-35.347 0-64-28.654-64-64-.128-7.113-3.727-12.146-10.32-14.616-5.187-2.29-11.244-1.19-15.129 2.608l-1.271 1.271a64 64 0 0 1-90.544.017 64 64 0 0 1-.008-90.552l1.115-1.112c3.963-4.053 5.062-10.11 2.682-15.505-2.178-5.08-7.164-8.382-12.605-8.404H64c-35.346 0-64-28.654-64-64 0-35.347 28.654-64 64-64 7.113-.128 12.146-3.727 14.616-10.32 2.29-5.187 1.19-11.244-2.608-15.129l-1.271-1.271a64 64 0 0 1-.017-90.544 64 64 0 0 1 90.552-.008l1.112 1.115a13.867 13.867 0 0 0 15.296 2.773 21.333 21.333 0 0 1 4.244-1.364c3.738-2.536 6.058-6.774 6.076-11.332V64c0-35.346 28.654-64 64-64 35.346 0 64 28.654 64 64v1.835c.022 5.527 3.324 10.513 8.614 12.781 5.186 2.29 11.243 1.19 15.128-2.608l1.271-1.271a64 64 0 0 1 90.544-.017 64 64 0 0 1 .008 90.552l-1.115 1.112a13.867 13.867 0 0 0-2.773 15.296 21.333 21.333 0 0 1 1.364 4.244c2.536 3.738 6.774 6.058 11.332 6.076zm1.707 85.333H448c11.782 0 21.333-9.55 21.333-21.333 0-11.782-9.55-21.333-21.333-21.333h-3.712a56.533 56.533 0 0 1-51.736-34.263 21.333 21.333 0 0 1-1.545-5.635c-7.068-20.162-2.163-42.777 13.108-58.387l1.288-1.289a21.333 21.333 0 0 0-.016-30.203 21.333 21.333 0 0 0-30.195.008l-1.448 1.446c-16.52 16.16-41.215 20.638-62.148 11.398-20.71-8.877-34.173-29.204-34.263-51.822V64c0-11.782-9.55-21.333-21.333-21.333-11.782 0-21.333 9.55-21.333 21.333v3.712a56.533 56.533 0 0 1-34.263 51.736 21.333 21.333 0 0 1-5.635 1.545c-20.162 7.068-42.777 2.163-58.387-13.108l-1.289-1.288a21.333 21.333 0 0 0-30.203.016 21.333 21.333 0 0 0 .008 30.195l1.446 1.448c16.16 16.52 20.638 41.215 11.811 61.108-8.012 21.786-28.53 36.46-52.235 37.01H64c-11.782 0-21.333 9.55-21.333 21.333 0 11.782 9.55 21.333 21.333 21.333h3.712c22.532.09 42.86 13.552 51.645 34.053 9.331 21.143 4.854 45.837-11.472 62.525l-1.288 1.289a21.333 21.333 0 0 0 .016 30.203 21.333 21.333 0 0 0 30.195-.008l1.448-1.446c16.52-16.16 41.215-20.638 61.108-11.811 21.786 8.012 36.46 28.53 37.01 52.235V448c0 11.782 9.55 21.333 21.333 21.333 11.782 0 21.333-9.55 21.333-21.333v-3.712c.09-22.532 13.552-42.86 34.053-51.645 21.143-9.331 45.837-4.854 62.525 11.472l1.289 1.288a21.333 21.333 0 0 0 30.203-.016 21.333 21.333 0 0 0-.008-30.195l-1.446-1.448c-16.134-16.493-20.623-41.133-11.352-62.253 8.9-20.651 29.197-34.068 51.776-34.158zm-190.08 64c-47.128 0-85.333-38.205-85.333-85.333s38.205-85.333 85.333-85.333 85.333 38.205 85.333 85.333-38.205 85.333-85.333 85.333zm0-42.666c23.564 0 42.667-19.103 42.667-42.667S279.564 213.333 256 213.333 213.333 232.436 213.333 256s19.103 42.667 42.667 42.667z"
                                fill="hsl(213, 17%, 20%)"
                                fillRule="evenodd"
                              />
                            </svg>
                          </div>
                        </styled.div>
                      </Icon>
                    </Styled(Icon)>
                  </button>
                </styled.button>
              </Button>
            </Button>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c5"
          >
            <p>
              Render Props
            </p>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c6"
          >
            <Button
              ghost={true}
            >
              <Button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                inverted={false}
                isGoogle={false}
                light={false}
                onClick={[Function]}
                primary={false}
                rounded={false}
                secondary={false}
                small={false}
                success={false}
                tiny={false}
                type="button"
              >
                <styled.button
                  big={false}
                  className=""
                  disabled={false}
                  failure={false}
                  fluid={false}
                  ghost={true}
                  inverted={false}
                  isGoogle={false}
                  light={false}
                  onClick={[Function]}
                  primary={false}
                  rounded={false}
                  secondary={false}
                  small={false}
                  success={false}
                  tiny={false}
                  type="button"
                >
                  <button
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    reportTitle
                  </button>
                </styled.button>
              </Button>
            </Button>
          </div>
        </styled.div>
      </div>
    </KpiChart>
  </Styled(KpiChart)>
</ThemeProvider>
`;

exports[`<KpiChart /> should render withouth a problem 1`] = `
.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.7rem 1.4rem;
  border-radius: 0.4rem;
  font-size: calc(1.2rem + 0.2rem);
  line-height: calc(1.2rem + 0.2rem);
  color: hsl(0,100%,100%);
  border: 1px solid;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  cursor: pointer;
  outline: none;
  padding: 0.4rem 1.5rem;
  color: #dbdfe6;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(218,18%,91%);
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c3:hover:not([disabled]) {
  background: #dbdfe6;
  border: 1px solid #dbdfe6;
  color: hsl(0,100%,100%)   color:current;
  background: none;
  border: none;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.7rem 1.4rem;
  border-radius: 0.4rem;
  font-size: calc(1.2rem + 0.2rem);
  line-height: calc(1.2rem + 0.2rem);
  color: hsl(0,100%,100%);
  border: 1px solid;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  cursor: pointer;
  outline: none;
  color: #dbdfe6;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(218,18%,91%);
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c7:hover:not([disabled]) {
  background: #dbdfe6;
  border: 1px solid #dbdfe6;
  color: hsl(0,100%,100%)   color:current;
  background: none;
  border: none;
}

.c4 {
  display: inline-block;
  font-size: 1rem;
  line-height: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-weight: 600;
  font-size: 1.6rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px dotted hsl(213,17%,20%);
}

.c5 {
  height: 37.3rem;
}

.c6 {
  position: absolute;
  bottom: 1.5rem;
  left: 1rem;
}

.c6 button {
  color: hsl(200,74%,46%);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2.4rem 2rem;
  height: 100%;
  border-radius: 0.4rem;
  border: 1px solid hsl(218,18%,91%);
  background: hsl(0,100%,100%);
  font-size: 1.2rem;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(KpiChart)
    reportTitle="reportTitle"
    title="title"
  >
    <KpiChart
      className="c0"
      render={[Function]}
      reportTitle="reportTitle"
      title="title"
    >
      <div
        className="c0"
      >
        <styled.div>
          <div
            className="c1"
          >
            <styled.div>
              <div
                className="c2"
              >
                title
              </div>
            </styled.div>
            <Button
              ghost={true}
              onClick={[Function]}
              small={true}
            >
              <Button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                inverted={false}
                isGoogle={false}
                light={false}
                onClick={[Function]}
                primary={false}
                rounded={false}
                secondary={false}
                small={true}
                success={false}
                tiny={false}
                type="button"
              >
                <styled.button
                  big={false}
                  className=""
                  disabled={false}
                  failure={false}
                  fluid={false}
                  ghost={true}
                  inverted={false}
                  isGoogle={false}
                  light={false}
                  onClick={[Function]}
                  primary={false}
                  rounded={false}
                  secondary={false}
                  small={true}
                  success={false}
                  tiny={false}
                  type="button"
                >
                  <button
                    className="c3"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <Styled(Icon)
                      color="hsl(213, 17%, 20%)"
                      height="1.6rem"
                      name="cog"
                      width="1.6rem"
                    >
                      <Icon
                        className=""
                        color="hsl(213, 17%, 20%)"
                        height="1.6rem"
                        name="cog"
                        spin={false}
                        width="1.6rem"
                      >
                        <styled.div
                          spin={false}
                        >
                          <div
                            className="c4"
                          >
                            <svg
                              height="1.6rem"
                              viewBox="0 0 512 512"
                              width="1.6rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M444.373 192H448c35.346 0 64 28.654 64 64 0 35.346-28.654 64-64 64h-1.835a13.867 13.867 0 0 0-12.69 8.404c-2.38 5.396-1.282 11.453 2.517 15.338l1.271 1.271a64 64 0 0 1 .017 90.544 64 64 0 0 1-90.552.008l-1.112-1.115c-4.053-3.963-10.11-5.062-15.505-2.682-5.08 2.178-8.382 7.164-8.404 12.605V448c0 35.346-28.654 64-64 64-35.347 0-64-28.654-64-64-.128-7.113-3.727-12.146-10.32-14.616-5.187-2.29-11.244-1.19-15.129 2.608l-1.271 1.271a64 64 0 0 1-90.544.017 64 64 0 0 1-.008-90.552l1.115-1.112c3.963-4.053 5.062-10.11 2.682-15.505-2.178-5.08-7.164-8.382-12.605-8.404H64c-35.346 0-64-28.654-64-64 0-35.347 28.654-64 64-64 7.113-.128 12.146-3.727 14.616-10.32 2.29-5.187 1.19-11.244-2.608-15.129l-1.271-1.271a64 64 0 0 1-.017-90.544 64 64 0 0 1 90.552-.008l1.112 1.115a13.867 13.867 0 0 0 15.296 2.773 21.333 21.333 0 0 1 4.244-1.364c3.738-2.536 6.058-6.774 6.076-11.332V64c0-35.346 28.654-64 64-64 35.346 0 64 28.654 64 64v1.835c.022 5.527 3.324 10.513 8.614 12.781 5.186 2.29 11.243 1.19 15.128-2.608l1.271-1.271a64 64 0 0 1 90.544-.017 64 64 0 0 1 .008 90.552l-1.115 1.112a13.867 13.867 0 0 0-2.773 15.296 21.333 21.333 0 0 1 1.364 4.244c2.536 3.738 6.774 6.058 11.332 6.076zm1.707 85.333H448c11.782 0 21.333-9.55 21.333-21.333 0-11.782-9.55-21.333-21.333-21.333h-3.712a56.533 56.533 0 0 1-51.736-34.263 21.333 21.333 0 0 1-1.545-5.635c-7.068-20.162-2.163-42.777 13.108-58.387l1.288-1.289a21.333 21.333 0 0 0-.016-30.203 21.333 21.333 0 0 0-30.195.008l-1.448 1.446c-16.52 16.16-41.215 20.638-62.148 11.398-20.71-8.877-34.173-29.204-34.263-51.822V64c0-11.782-9.55-21.333-21.333-21.333-11.782 0-21.333 9.55-21.333 21.333v3.712a56.533 56.533 0 0 1-34.263 51.736 21.333 21.333 0 0 1-5.635 1.545c-20.162 7.068-42.777 2.163-58.387-13.108l-1.289-1.288a21.333 21.333 0 0 0-30.203.016 21.333 21.333 0 0 0 .008 30.195l1.446 1.448c16.16 16.52 20.638 41.215 11.811 61.108-8.012 21.786-28.53 36.46-52.235 37.01H64c-11.782 0-21.333 9.55-21.333 21.333 0 11.782 9.55 21.333 21.333 21.333h3.712c22.532.09 42.86 13.552 51.645 34.053 9.331 21.143 4.854 45.837-11.472 62.525l-1.288 1.289a21.333 21.333 0 0 0 .016 30.203 21.333 21.333 0 0 0 30.195-.008l1.448-1.446c16.52-16.16 41.215-20.638 61.108-11.811 21.786 8.012 36.46 28.53 37.01 52.235V448c0 11.782 9.55 21.333 21.333 21.333 11.782 0 21.333-9.55 21.333-21.333v-3.712c.09-22.532 13.552-42.86 34.053-51.645 21.143-9.331 45.837-4.854 62.525 11.472l1.289 1.288a21.333 21.333 0 0 0 30.203-.016 21.333 21.333 0 0 0-.008-30.195l-1.446-1.448c-16.134-16.493-20.623-41.133-11.352-62.253 8.9-20.651 29.197-34.068 51.776-34.158zm-190.08 64c-47.128 0-85.333-38.205-85.333-85.333s38.205-85.333 85.333-85.333 85.333 38.205 85.333 85.333-38.205 85.333-85.333 85.333zm0-42.666c23.564 0 42.667-19.103 42.667-42.667S279.564 213.333 256 213.333 213.333 232.436 213.333 256s19.103 42.667 42.667 42.667z"
                                fill="hsl(213, 17%, 20%)"
                                fillRule="evenodd"
                              />
                            </svg>
                          </div>
                        </styled.div>
                      </Icon>
                    </Styled(Icon)>
                  </button>
                </styled.button>
              </Button>
            </Button>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="c5"
          />
        </styled.div>
        <styled.div>
          <div
            className="c6"
          >
            <Button
              ghost={true}
            >
              <Button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                inverted={false}
                isGoogle={false}
                light={false}
                onClick={[Function]}
                primary={false}
                rounded={false}
                secondary={false}
                small={false}
                success={false}
                tiny={false}
                type="button"
              >
                <styled.button
                  big={false}
                  className=""
                  disabled={false}
                  failure={false}
                  fluid={false}
                  ghost={true}
                  inverted={false}
                  isGoogle={false}
                  light={false}
                  onClick={[Function]}
                  primary={false}
                  rounded={false}
                  secondary={false}
                  small={false}
                  success={false}
                  tiny={false}
                  type="button"
                >
                  <button
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    reportTitle
                  </button>
                </styled.button>
              </Button>
            </Button>
          </div>
        </styled.div>
      </div>
    </KpiChart>
  </Styled(KpiChart)>
</ThemeProvider>
`;
